  * Add Breaks on lvm2 versions without native systemd support.
    (Closes: #678438, #692120)
  * Do not fail udev upgrades if the udev service is already runtime-masked
    when the preinst script is run. (Closes: #755746)
  * Add Pre-Depends on systemd to systemd-sysv, to avoid risking that the
    sysv-compatible symlinks become dangling on a partial install.

  [ Martin Pitt ]
  * Rename "api" autopkgtest to "build-login", and stop requiring that
    sd_login_monitor_new() succeeds. It doesn't in many environments like
    schroot or after upgrades from < 204, and the main point of the test is
    to check that libsystemd-login-dev has correct contents and dependencies.
    Drop "isolation-machine" requirement.
  * Use glibc's xattr support instead of requiring libattr. Fixes FTBFS with
    latest glibc and libattr. Cherrypicked from trunk. Drop libattr1-dev build
    dependency. (Closes: #756097)
  * Build python3-systemd for Python 3 bindings. Drop python-systemd; it does
    not have any reverse dependencies, and we want to encourage moving to
    Python 3. (LP: #1258089)
  * Add simple autopkgtest for python3-systemd.
  * Add dbus dependency to libpam-systemd. (Closes: #755968)
  * Fix /dev/cdrom symlink to appear for all types of drives, not just for
    pure CD-ROM ones. Also, fix the symlinks to stay after change events.
    (LP: #1323777)
  * 75-persistent-net-generator.rules: Adjust Ravello interfaces; they don't
    violate the assignment schema, they should just not be persistent.
    Thanks to Boris Figovsky. (Closes: #747475, LP: #1317776)
  * Reinstate patches to make logind D-BUS activatable.
  * Re-add systemd-shim alternative dependency to libpam-systemd. Version it
    to ensure cgmanager support. (Closes: #754984, LP: #1343802)

 -- Michael Biebl <biebl@debian.org>  Thu, 17 Jul 2014 00:48:14 +0200

systemd (208-6) unstable; urgency=medium

  [ Jon Severinsson ]
  * Add v208-stable patch series.